# DSW-Vision

./: .gitignore  CHANGELOG.md  LICENSE.txt  Makefile  README.md
dep/: Makefile
design/: AVL_prototype.ipynb  Makefile  Panel.sketch  flow_prototype.ipynb  midi.ipynb
design/flow_cpp_prototype/: CMakeLists.txt  main.cpp
design/opencv_py_examples/: dis_opt_flow.py  video.py
src/: AmbientLight.cpp  AmbientLightController.cpp  AmbientLightController.hpp  Flow.cpp  Vision.cpp  Vision.hpp  colors.h  controls.hpp
tools/: otoolr.py
